auto-suggest with typeahead works on the frontend

--- a/views/base.html
+++ b/views/base.html
@@ -3,6 +3,7 @@
 
   <head>
     <link rel="stylesheet" href="./css/bootstrap.min.css" />
+    <link rel="stylesheet" href="./css/typeahead.js-bootstrap.css" />
     <link rel="stylesheet" href="./css/viztag.css" />
     <title>viztag</title>
   </head>
@@ -44,6 +45,7 @@
     <!-- Le javascript -->
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
     <script src="./js/bootstrap.min.js"></script>
+    <script src="./js/viztag.js"></script>
 
   </body>
 
