--- a/views/login.twig
+++ b/views/login.twig
@@ -8,10 +8,10 @@
     <fieldset>
       <legend>login</legend>
       <label for="username">username</label>
-      <input id="username" type="text" name="username" />
+      <input id="username" type="text" name="username" tabindex="1" />
       <label for="password">password</label>
-      <input id="password" type="password" name="password" />
-      <button type="submit">Log in</button>
+      <input id="password" type="password" name="password" tabindex="2" />
+      <button type="submit" tabindex="3>Log in</button>
     </fieldset>
   </form>
 {% endblock %}
