admin views for reviewing taggings

--- a/views/base.html
+++ b/views/base.html
@@ -2,9 +2,9 @@
 <html>
 
   <head>
-    <link rel="stylesheet" href="./css/bootstrap.min.css" />
-    <link rel="stylesheet" href="./css/typeahead.js-bootstrap.css" />
-    <link rel="stylesheet" href="./css/viztag.css" />
+    <link rel="stylesheet" href="/viztag/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="/viztag/css/typeahead.js-bootstrap.css" />
+    <link rel="stylesheet" href="/viztag/css/viztag.css" />
     <title>viztag</title>
   </head>
 
@@ -24,6 +24,7 @@
               <!--<li class="active"><a href="#">Home</a></li>-->
               <li><a href="/viztag">Home</a></li>
               <li><a href="/viztag/tag">Tag</a></li>
+              <li><a href="/viztag/taggings">Taggings</a></li>
             </ul>
           </div><!--/.nav-collapse -->
           <div class="pull-right">
@@ -58,8 +59,8 @@
 
     <!-- Le javascript -->
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-    <script src="./js/bootstrap.min.js"></script>
-    <script src="./js/viztag.js"></script>
+    <script src="/viztag/js/bootstrap.min.js"></script>
+    <script src="/viztag/js/viztag.js"></script>
 
   </body>
 
