--- a/css/viztag.css
+++ b/css/viztag.css
@@ -1,3 +1,27 @@
 body {
   padding-top: 60px;
 }
+#footer {
+  clear: both;
+}
+
+ul.taggings li {
+  float: left;
+  list-style-type: none;
+  position: relative;
+}
+ul.taggings li p {
+  position: absolute;
+  bottom: 0;
+  width: 180px;
+  padding: 6px 0;
+  background: black;
+  text-align: center;
+  opacity: .75;
+  margin: 0;
+  font-weight: bold;
+}
+ul.taggings li img {
+  width: 180px;
+  height: 180px;
+}
