--- a/views/login.twig
+++ b/views/login.twig
@@ -11,7 +11,7 @@
       <input id="username" type="text" name="username" tabindex="1" />
       <label for="password">password</label>
       <input id="password" type="password" name="password" tabindex="2" />
-      <button type="submit" tabindex="3>Log in</button>
+      <button type="submit" tabindex="3">Log in</button>
     </fieldset>
   </form>
 {% endblock %}
