prep for vera-wellness codings

--- a/views/by-image-single.twig
+++ b/views/by-image-single.twig
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block content %}
-  <h1>tagging (id={{status.verastatus_id}})</h1>
+  <h1>by image (id={{status.verastatus_id}})</h1>
   <img src="{{status.src}}" alt="" width="250" height="250" />
   {% for coder, ctags in tags %}
   <p>coder {{coder}}</p>
