--- a/views/mismatch.twig
+++ b/views/mismatch.twig
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block content %}
-  <h1>Taggings...</h1>
+  <h1>Tagging mismatches...</h1>
   <ul>
   {% for status in mismatches %}
   {% for m in status %}
