--- a/views/taggings.twig
+++ b/views/taggings.twig
@@ -4,6 +4,7 @@
   <h1>Taggings...</h1>
   <ul>
     <li><a href="/viztag/taggings/by-image">...by image</a></li>
+    <li><a href="/viztag/taggings/by-tags">...by tags</a></li>
     <li><a href="/viztag/taggings/mismatch">...mismatches</a></li>
   </ul>
 {% endblock %}
