correctly sample from the list of available statuses left to tag

--- a/views/tag.twig
+++ b/views/tag.twig
@@ -5,7 +5,7 @@
   <div class="row">
 
     <div class="span4">
-      <img src="{{status.src}}" alt="" width="250" height="250" />
+      <img src="{{status.src}}" alt="" />
     </div>
 
     <div class="span8">
@@ -21,7 +21,7 @@
             {% endfor %}
           </select>
           {% endfor %}
-          <input class="input-xxlarge" type="text" id="viztag-tagging" placeholder="filter..." autocomplete="off" name="tags">
+          <!--<input class="input-xxlarge" type="text" id="viztag-tagging" placeholder="filter..." autocomplete="off" name="tags">-->
           <br><button type="submit">Add tags</button>
         </fieldset>
       </form>
