coders can add comments about statuses they are coding

--- a/views/tag.twig
+++ b/views/tag.twig
@@ -21,6 +21,7 @@
             {% endfor %}
           </select>
           {% endfor %}
+          <input class="input-xxlarge" type="text" id="comment" placeholder="comment (optional)" autocomplete="off" name="comment">
           <!--<input class="input-xxlarge" type="text" id="viztag-tagging" placeholder="filter..." autocomplete="off" name="tags">-->
           <br><button type="submit">Add tags</button>
         </fieldset>
