link and code for coding agreement samples

--- a/views/base.html
+++ b/views/base.html
@@ -25,6 +25,7 @@
               <li><a href="/viztag">Home</a></li>
               <li><a href="/viztag/tag">Tag</a></li>
               <li><a href="/viztag/taggings">Taggings</a></li>
+              <li><a href="/viztag/agreement">Agreement Sample</a></li>
             </ul>
           </div><!--/.nav-collapse -->
           <div class="pull-right">
